--- a/src/app/pages/edit-details/edit-details.page.scss
+++ b/src/app/pages/edit-details/edit-details.page.scss
@@ -1,3 +1,19 @@
 .labelDetails {
     color: #5260ff;
 }
+
+img {
+    border: 1px solid #ddd; /* Gray border */
+    border-radius: 4px;  /* Rounded border */
+    padding: 5px; /* Some padding */
+    width: 30vw; /* Set a small width */
+    // transition:transform 0.25s ease;
+  }
+  
+  /* Add a hover effect (blue shadow) */
+  img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    width: 70vw;
+    // -webkit-transform:scale(1.5); /* or some other value */
+    // transform:scale(1.5);
+  }
