make deciduous list

--- a/src/app/home-deciduous/home-deciduous.page.html
+++ b/src/app/home-deciduous/home-deciduous.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-title size="lrg"class="ionTitle">
       
-      <b>Conifer Cache MN</b>
+      <b>Deciduous Cache MN</b>
       <ion-icon size="lrg" name="menu" horizontal="end"></ion-icon>
     </ion-title>
   </ion-toolbar>
@@ -54,13 +54,13 @@
 
   <!-- floating button that allows user to add new coniferous tree to list -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="success" routerLink="/edit-details" routerDirection="forward">
+    <ion-fab-button color="success" routerLink="/deciduous-edit-details" routerDirection="forward">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
   <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button color="secondary" routerLink="/home-deciduous" routerDirection="forward">
+    <ion-fab-button color="secondary" routerLink="/home" routerDirection="forward">
       <ion-icon name="link"></ion-icon>
     </ion-fab-button>
   </ion-fab>
